feat: seo onpage

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 /* Bạn có thể thêm các style tùy chỉnh ở đây */
-/* Ví dụ: */
-/* body {
+
+body {
   @apply font-sans;
-} */
+}
